# localkb

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
icon-src/: gen.mjs  render.mjs
sample-kb/: faq.txt  产品说明.md
scripts/: gen-entertainment-bulk.mjs  gen-entertainment-more.mjs  gen-entertainment-office.mjs  gen-test-docs.mjs  gen-test-kb.mjs  gen-test-knowledge.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  chunk.rs  commands.rs  db.rs  embed.rs  history.rs  index.rs  indexer.rs  lib.rs  main.rs  parsers.rs  search.rs  settings.rs  state.rs
src/components/: Markdown.tsx  SourceList.tsx
src/lib/: api.ts
src/views/: ChatView.tsx  SettingsView.tsx
