[package]
name = "localkb"
version = "0.1.0"
description = "LOCALKB — 本地知识检索"
authors = ["you"]
edition = "2021"

[lib]
name = "localkb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# storage / index
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
blake3 = "1"
# filesystem watching for auto-sync of indexed folders
notify = "6"

# document parsers
zip = "2"
quick-xml = "0.36"
calamine = "0.26"
pdfium-render = "0.8"

# remote model (OpenAI-compatible SSE)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# local embeddings (ONNX); init failure degrades gracefully to FTS-only
fastembed = "4"

[features]
default = []
